tests/baselines/reference/fixTypeParameterInSignatureWithRestParameters.errors.txt
tests/cases/compiler/fixTypeParameterInSignatureWithRestParameters.ts(2,1): error TS2448: The type argument for type parameter 'T' cannot be inferred from the usage. Try specifying the type arguments explicitly.


==== tests/cases/compiler/fixTypeParameterInSignatureWithRestParameters.ts (1 errors) ====
    function bar<T>(item1: T, item2: T) { }
    bar(1, ""); // Should be ok
    ~~~
!!! error TS2448: The type argument for type parameter 'T' cannot be inferred from the usage. Try specifying the type arguments explicitly.